--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <option value="DFS">Depth-First Search</option>
                 </select>
                 <button class="algo">Visualize</button>
+                <button class="reset" disabled> Reset </button>
             </div>
         </div>
     </section>
