--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +15,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <title>PathFinder</title>
 </head>
+
 <body>
     <section id="menu">
         <div>
@@ -25,7 +27,8 @@
                     <option value="DFS">Depth-First Search</option>
                 </select>
                 <button class="algo">Visualize</button>
-                <button class="reset" disabled> Reset </button>
+                <button class="reset"> Reset </button>
+                <button class="maze"> Maze</button>
             </div>
         </div>
     </section>
@@ -37,4 +40,5 @@
     <script src="./scripts/grid.js"></script>
     <script src="index.js"></script>
 </body>
+
 </html>
